Phone Alignment Sponsor Section fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3022,7 +3022,6 @@ a{
 
 
 .sponsors-logo {
-  width: 100vh;
   opacity: 0.9;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
